Fix cursor presentation on portrait small screens
The cursor info was clipped/hidden for practice or watched games.

--- a/src/tactics/core.scss
+++ b/src/tactics/core.scss
@@ -641,10 +641,12 @@
         flex-direction: column;
 
         .alert {
-          top: -26px;
+          position: relative;
+          width: max-content;
+          margin-bottom: 8px;
         }
         #player-n, #player-e {
-          top: 100px;
+          top: 126px;
         }
 
         .player.active {
